--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,60 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+}
+
+.header {
+  background-color: #635854;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-bottom: 4px solid #3596f5;
+}
+
+.navbar {
+  max-width: 1240px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-menu {
+  list-style: none;
+  display: flex;
+  text-align: center;
+}
+
+.navbar-item .navbar-link {
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+}
+
+.navbar-item {
+  max-width: 116px;
+}
+
+.navbar-item:not(:last-child) {
+  margin-right: 80px;
+}
+
+.navbar-contacts {
+  text-align: right;
+}
+
+.navbar-text {
+  display: block;
+  color: #fff;
+  margin-bottom: 4px;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.navbar-phone {
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 20px;
+  color: #fff;
 }
