--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@
   margin: auto;
   padding-top: 54px;
   display: flex;
+  overflow: auto;
 }
 
 .main-info {
@@ -140,4 +141,23 @@ path.current-floor {
   color: #fff;
   padding: 16px 36px;
   cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal .modal-dialog {
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  flex-grow: 1;
 }
