Доделал модальное окно

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@ path.current-floor {
   opacity: 1;
 }
 
+path.current-room {
+  opacity: 1 !important;
+}
+
 .counter-group {
   display: flex;
   flex-direction: column;
@@ -143,6 +147,10 @@ path.current-floor {
   cursor: pointer;
 }
 
+.modal.active {
+  display: flex;
+}
+
 .modal {
   position: fixed;
   left: 0;
@@ -150,14 +158,112 @@ path.current-floor {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
+  z-index: 9;
 }
 
 .modal .modal-dialog {
   max-width: 1000px;
   min-height: 565px;
-  background-color: #fff;
+  background-color: #ebebeb;
   flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  z-index: 11;
+}
+
+.modal .modal-image {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  align-items: center;
+}
+
+.modal .modal-image .modal-title {
+  margin-top: 50px;
+  margin-bottom: 25px;
+}
+
+.modal .modal-info {
+  width: 400px;
+  max-height: 565px;
+  background-color: #fff;
+  padding-left: 46px;
+}
+
+.modal .modal-info .modal-title {
+  margin-top: 50px;
+}
+
+.modal .modal-info-wrapper {
+  max-width: 229px;
+}
+
+.modal .close {
+  position: absolute;
+  top: 40px;
+  right: 30px;
+  cursor: pointer;
+}
+
+.modal .modal-title {
+  font-family: 'Bebas Neue';
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: normal;
+  color: #000;
+}
+
+.modal .modal-floor path {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.modal .modal-floor path:hover {
+  opacity: 1;
+}
+
+.modal .modal-list {
+  list-style: none;
+  margin-top: 55px;
+}
+
+.modal .modal-list .modal-item a {
+  color: inherit;
+}
+
+.modal .modal-list .modal-item {
+  font-family: 'Roboto';
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  max-width: 185px;
+  cursor: pointer;
+}
+
+.modal .modal-list .modal-item:hover {
+  text-decoration: underline;
+  color: #3596f5;
+}
+
+.current-modal-item {
+  text-decoration: underline;
+  color: #3596f5 !important;
+}
+
+.modal .modal-list .modal-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.modal .modal-desc {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-size: 16px;
+  line-height: 19px;
+  max-width: 230px;
+  margin-top: 55px;
+  color: #635854;
 }
